--- a/package.json
+++ b/package.json
@@ -1,31 +1,7 @@
 {
-  "name": "manage-back-stage",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
   "dependencies": {
-    "axios": "^0.18.0",
-    "element-ui": "^2.4.11",
-    "qs": "^6.6.0",
-    "vue": "^2.5.17",
-    "vue-axios": "^2.1.4",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.2.0",
-    "@vue/cli-plugin-eslint": "^3.2.0",
-    "@vue/cli-service": "^3.2.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0-0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.17"
+    "chalk": "^2.4.1",
+    "handlebars": "^4.0.12",
+    "supervisor": "^0.12.0"
   }
 }
