--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "manage-back-stage",
+  "name": "webServer",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Atlas-lili <32982388+Atlas-lili@users.noreply.github.com>",
@@ -17,6 +17,7 @@
     "qs": "^6.7.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
+    "vue-cookie": "^1.1.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "mocha": "^6.1.4",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
