--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_install:
 install: npm install --registry=https://registry.npm.taobao.org
 script: npx mocha test
 after_success:
-- ssh 'root@39.107.85.46' 'cd /root/.nvm/webServer && pm2 delete all && git pull && npm install --registry=https://registry.npm.taobao.org'
-- ssh 'root@39.107.85.46' 'cd /root/.nvm/webServer && SASS_BINARY_SITE=https://npm.taobao.org/mirrors/node-sass/ npm install node-sass && npm run dev'
+- ssh 'root@39.107.85.46' 'cd /root/.nvm/webServer && killall -9 node && git pull && npm install --registry=https://registry.npm.taobao.org'
+- ssh 'root@39.107.85.46' 'cd /root/.nvm/webServer && SASS_BINARY_SITE=https://npm.taobao.org/mirrors/node-sass/ npm install node-sass && nohup npm run dev &'
