--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ after_success:
 - ssh 'root@39.107.85.46' 'cd /root/.nvm/webServer && git pull'
 - ssh 'root@39.107.85.46' 'cd /root/.nvm/webServer && npm install --registry=https://registry.npm.taobao.org'
 - ssh 'root@39.107.85.46' 'cd /root/.nvm/webServer && SASS_BINARY_SITE=https://npm.taobao.org/mirrors/node-sass/ npm install node-sass'
-- ssh 'root@39.107.85.46' 'cd /root/.nvm/webServer && nohup npm run dev &'
+- ssh 'root@39.107.85.46' 'cd /root/.nvm/webServer && (npm run dev &)'
